--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "ethers": "^4.0.33",
     "openzeppelin-solidity": "2.1.3",
     "query-string": "^6.9.0",
+    "truffle-flattener": "^1.5.0",
     "web3": "1.2.1",
     "ws": "^7.2.0"
   },
