updated events for router and testing rebalancer proxy

--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   ],
   "scripts": {
     "test": "npm run deploy_test && npm run test_only",
-    "build": "npm run compile -- --all && npm run copy_tew && npm run clean_contract_json && npm run build:wrappers && npm run build:test_wrappers && npm run build:js",
+    "build": "npm run compile -- --all && npm run copy_all && npm run clean_contract_json && npm run build:wrappers && npm run build:test_wrappers && npm run build:js",
+    "copy_all": "npm run copy_tew && npm run copy_uniswap_core && npm run copy_uniswap_periphery",
     "copy_tew": "cp node_modules/@dydxprotocol/exchange-wrappers/build/contracts/TestExchangeWrapper.json ./build/contracts/",
+    "copy_uniswap_core": "cp node_modules/@uniswap/v2-core/build/UniswapV2Factory.json ./build/contracts/ && cp node_modules/@uniswap/v2-core/build/UniswapV2Pair.json ./build/contracts/",
+    "copy_uniswap_periphery": "cp node_modules/@uniswap/v2-periphery/build/UniswapV2Router02.json ./build/contracts/",
     "copy_tew_cov": "cp ./node_modules/@dydxprotocol/exchange-wrappers/build/contracts/TestExchangeWrapper.json ./build/contracts/",
     "compile": "node_modules/.bin/truffle compile",
     "build:wrappers": "typechain --target=web3-1.0.0 --outDir=build/wrappers/ './build/published_contracts/*[^(Impl)].json'",
@@ -74,6 +77,8 @@
     "@poanet/solidity-flattener": "^3.0.6",
     "@truffle/hdwallet-provider": "^1.2.6",
     "@types/web3": "1.0.18",
+    "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "axios": "^0.19.0",
     "bignumber.js": "^8.1.1",
     "canonical-weth": "^1.4.0",
