fixed rebalancer to *finally* work

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "scripts": {
     "test": "npm run deploy_test && npm run test_only",
     "build": "npm run compile -- --all && npm run copy_all && npm run clean_contract_json && npm run build:wrappers && npm run build:test_wrappers && npm run build:js",
-    "copy_all": "npm run copy_tew && npm run copy_uniswap_core && npm run copy_uniswap_periphery",
+    "copy_all": "npm run copy_tew",
     "copy_tew": "cp node_modules/@dydxprotocol/exchange-wrappers/build/contracts/TestExchangeWrapper.json ./build/contracts/",
-    "copy_uniswap_core": "cp node_modules/@uniswap/v2-core/build/UniswapV2Factory.json ./build/contracts/ && cp node_modules/@uniswap/v2-core/build/UniswapV2Pair.json ./build/contracts/",
-    "copy_uniswap_periphery": "cp node_modules/@uniswap/v2-periphery/build/UniswapV2Router02.json ./build/contracts/",
+    "copy_uniswap_core": "cp -u node_modules/@uniswap/v2-core/build/UniswapV2Factory.json ./build/contracts/ && cp -u node_modules/@uniswap/v2-core/build/UniswapV2Pair.json ./build/contracts/",
+    "copy_uniswap_periphery": "cp -u node_modules/@uniswap/v2-periphery/build/UniswapV2Router02.json ./build/contracts/",
     "copy_tew_cov": "cp ./node_modules/@dydxprotocol/exchange-wrappers/build/contracts/TestExchangeWrapper.json ./build/contracts/",
     "compile": "node_modules/.bin/truffle compile",
     "build:wrappers": "typechain --target=web3-1.0.0 --outDir=build/wrappers/ './build/published_contracts/*[^(Impl)].json'",
@@ -47,7 +47,7 @@
     "deploy_coverage": "RPC_NODE_URI=http://127.0.0.1:8555 npm run reset_test_evm && COVERAGE=true npm run migrate -- --network coverage && RPC_NODE_URI=http://127.0.0.1:8555 npm run snapshot_test_evm && npm run clean_contract_json",
     "deploy_test_ci": "RPC_NODE_URI=http://0.0.0.0:8545 npm run reset_test_evm && npm run migrate -- --network test_ci --reset && RPC_NODE_URI=http://0.0.0.0:8545 npm run snapshot_test_evm && npm run clean_contract_json",
     "test_only": "NODE_ENV=test jest --setupFiles dotenv/config --runInBand",
-    "test_only_specific": "NODE_ENV=test jest --setupFiles dotenv/config --runInBand -t 'DolomiteAmmRouterProxy'",
+    "test_only_specific": "NODE_ENV=test jest --setupFiles dotenv/config --runInBand -t 'AmmRebalancerProxy'",
     "test_cov": "npm run deploy_coverage && NETWORK_ID=1002 COVERAGE=true RPC_NODE_URI=http://127.0.0.1:8555 npm run test_only -- --forceExit",
     "ci_test": "NODE_ENV=test RPC_NODE_URI=http://0.0.0.0:8545 jest --setupFiles dotenv/config --runInBand",
     "reset_test_evm": "node scripts/reset-test-evm.js",
@@ -95,6 +95,7 @@
     "@types/axios": "^0.14.0",
     "@types/es6-promisify": "^6.0.0",
     "@types/jest": "^24.0.9",
+    "@uniswap/lib": "^4.0.1-alpha",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
