--- a/package.json
+++ b/package.json
@@ -74,7 +74,6 @@
   "homepage": "https://github.com/dolomite-exchange/solo#readme",
   "dependencies": {
     "@dydxprotocol/exchange-wrappers": "0.5.3",
-    "@poanet/solidity-flattener": "^3.0.6",
     "@truffle/hdwallet-provider": "^1.2.6",
     "@types/web3": "1.0.18",
     "@uniswap/v2-core": "^1.0.1",
@@ -83,18 +82,19 @@
     "bignumber.js": "^8.1.1",
     "canonical-weth": "^1.4.0",
     "es6-promisify": "^6.0.1",
-    "ethers": "^4.0.33",
+    "ethers": "^4.0.49",
     "openzeppelin-solidity": "2.1.3",
     "query-string": "^6.9.0",
-    "truffle-flattener": "^1.5.0",
     "web3": "1.2.1",
     "ws": "^7.2.0"
   },
   "devDependencies": {
+    "@poanet/solidity-flattener": "^3.0.6",
     "@truffle/config": "^1.2.14",
     "@types/axios": "^0.14.0",
     "@types/es6-promisify": "^6.0.0",
     "@types/jest": "^24.0.9",
+    "@types/node": "^10.12.30",
     "@uniswap/lib": "^4.0.1-alpha",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.0.1",
@@ -112,6 +112,7 @@
     "ora": "^4.0.3",
     "solidity-coverage": "0.7.1",
     "truffle": "^5.1.12",
+    "truffle-flattener": "^1.5.0",
     "truffle-hdwallet-provider": "^1.0.16",
     "ts-jest": "^27.1.1",
     "ts-node": "^8.0.2",
