--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "canonical-weth": "^1.4.0",
     "es6-promisify": "^6.0.1",
     "ethers": "^4.0.49",
-    "openzeppelin-solidity": "2.1.3",
+    "openzeppelin-solidity": "^2.5.1",
     "query-string": "^6.9.0",
     "web3": "1.2.1",
     "ws": "^7.2.0"
