--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   },
   "scripts": {
     "test": "npm run deploy_test && npm run test_only",
-    "build": "npm run compile -- --all && npm run copy_all && npm run clean_contract_json && npm run build:wrappers && npm run build:test_wrappers && npm run build:js",
-    "copy_all": "echo 'copied'",
+    "build": "npm run compile -- --all && npm run clean_contract_json && npm run build:wrappers && npm run build:test_wrappers && npm run build:js",
     "compile": "truffle compile",
     "build:wrappers": "typechain --target=web3-1.0.0 --outDir=build/wrappers/ './build/published_contracts/*.json'",
     "build:test_wrappers": "typechain --target=web3-1.0.0 --outDir=build/testing_wrappers/ './build/testing_contracts/*.json'",
@@ -37,19 +36,21 @@
     "node": "ganache-cli",
     "debug": "truffle debug",
     "build:js": "rm -rf dist/ && node --max-old-space-size=8192 node_modules/.bin/tsc && cp -r build/wrappers dist/build",
-    "build:cov": "npm run copy_all && npm run clean_contract_json && npm run build:wrappers && npm run build:test_wrappers",
+    "build:cov": "npm run replace_bytecode && npm run clean_contract_json && npm run build:wrappers && npm run build:test_wrappers",
+    "replace_bytecode": "ts-node ./scripts/ReplaceCoverageBytecode.ts",
     "docker_node": "ganache-cli -i 1313 -d -p 8545 -h 0.0.0.0 --db=/home/.ganache",
+    "check_amm_bytecode": "ts-node ./scripts/CheckAmmBytecode.ts",
     "clean_contract_json": "ts-node ./scripts/CleanBuild.ts",
     "deploy": "truffle migrate --network=$NETWORK --reset && npm run save_deployed_addresses",
     "deploy_kovan": "NETWORK=kovan npm run deploy",
     "deploy_mainnet": "NETWORK=mainnet npm run deploy",
     "deploy_matic": "NETWORK=matic npm run deploy",
-    "deploy_test_matic": "NETWORK=mumbai_matic npm run deploy",
-    "deploy_test": "npm run reset_test_evm && npm run migrate -- --network test --reset && npm run snapshot_test_evm && npm run clean_contract_json",
+    "deploy_mumbai": "NETWORK=mumbai_matic npm run deploy",
+    "deploy_test": "npm run reset_test_evm && npm run migrate -- --network test --reset && npm run snapshot_test_evm && npm run check_amm_bytecode && npm run clean_contract_json",
     "deploy_coverage": "RPC_NODE_URI=http://127.0.0.1:8555 npm run reset_test_evm && COVERAGE=true npm run migrate -- --network coverage && RPC_NODE_URI=http://127.0.0.1:8555 npm run snapshot_test_evm && npm run clean_contract_json",
-    "deploy_test_ci": "RPC_NODE_URI=http://0.0.0.0:8545 npm run reset_test_evm && npm run migrate -- --network test_ci --reset && RPC_NODE_URI=http://0.0.0.0:8545 npm run snapshot_test_evm && npm run clean_contract_json",
+    "deploy_test_ci": "RPC_NODE_URI=http://0.0.0.0:8545 npm run reset_test_evm && npm run migrate -- --network test_ci --reset && RPC_NODE_URI=http://0.0.0.0:8545 npm run snapshot_test_evm && npm run check_amm_bytecode && npm run clean_contract_json",
     "test_only": "NODE_ENV=test jest --setupFiles dotenv/config --runInBand",
-    "test_only_specific": "NODE_ENV=test jest --setupFiles dotenv/config --runInBand -t 'AmmRebalancerProxy'",
+    "test_only_specific": "NODE_ENV=test jest --setupFiles dotenv/config --runInBand -t 'SignedOperationProxy'",
     "test_cov": "npm run deploy_coverage && NETWORK_ID=1002 COVERAGE=true RPC_NODE_URI=http://127.0.0.1:8555 npm run test_only -- --forceExit",
     "ci_test": "NODE_ENV=test RPC_NODE_URI=http://0.0.0.0:8545 jest --setupFiles dotenv/config --runInBand",
     "reset_test_evm": "node scripts/reset-test-evm.js",
@@ -76,6 +77,7 @@
   },
   "homepage": "https://github.com/dolomite-exchange/dolomite-margin#readme",
   "dependencies": {
+    "@openzeppelin/contracts": "^2.5.1",
     "@truffle/hdwallet-provider": "^1.2.6",
     "@types/web3": "1.0.18",
     "@uniswap/lib": "^4.0.1-alpha",
@@ -84,7 +86,6 @@
     "canonical-weth": "^1.4.0",
     "es6-promisify": "^6.0.1",
     "ethers": "^4.0.49",
-    "openzeppelin-solidity": "^2.5.1",
     "query-string": "^6.9.0",
     "web3": "1.2.1",
     "ws": "^7.2.0"
@@ -106,7 +107,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "ethlint": "^1.2.5",
-    "ganache-cli": "6.9.0",
+    "ganache-cli": "^6.12.2",
     "jest": "^27.4.5",
     "mocha-junit-reporter": "^1.18.0",
     "ora": "^4.0.3",
