--- a/package.json
+++ b/package.json
@@ -85,10 +85,9 @@
     "bignumber.js": "^8.1.1",
     "canonical-weth": "^1.4.0",
     "es6-promisify": "^6.0.1",
-    "ethers": "^4.0.49",
+    "ethers": "4.0.39",
     "query-string": "^6.9.0",
-    "web3": "1.2.1",
-    "ws": "^7.2.0"
+    "web3": "1.2.1"
   },
   "devDependencies": {
     "@poanet/solidity-flattener": "^3.0.6",
@@ -108,14 +107,14 @@
     "eslint-plugin-import": "^2.16.0",
     "ethlint": "^1.2.5",
     "ganache-cli": "^6.12.2",
-    "jest": "^27.4.5",
+    "jest": "24.1.0",
     "mocha-junit-reporter": "^1.18.0",
     "ora": "^4.0.3",
     "solidity-coverage": "0.7.1",
     "truffle": "^5.1.12",
     "truffle-flattener": "^1.5.0",
     "truffle-hdwallet-provider": "^1.0.16",
-    "ts-jest": "^27.1.1",
+    "ts-jest": "24.1.0",
     "ts-node": "^8.0.2",
     "tslint": "^5.13.1",
     "tslint-config-airbnb": "^5.11.1",
