--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
   "trailingComma": "all",
-  "singleQuote": true
+  "singleQuote": true,
+  "arrowParens": "avoid",
+  "printWidth": 120,
+  "semi": true
 }
