--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "truffle": "^5.1.12",
     "truffle-flattener": "^1.5.0",
     "truffle-hdwallet-provider": "^1.0.16",
+    "truffle-plugin-verify": "^0.5.21",
     "ts-jest": "24.1.0",
     "ts-node": "^8.0.2",
     "tslint": "^5.13.1",
