--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "deploy_coverage": "RPC_NODE_URI=http://127.0.0.1:8555 npm run reset_test_evm && COVERAGE=true npm run migrate -- --network coverage && RPC_NODE_URI=http://127.0.0.1:8555 npm run snapshot_test_evm && npm run clean_contract_json",
     "deploy_test_ci": "RPC_NODE_URI=http://0.0.0.0:8545 npm run reset_test_evm && npm run migrate -- --network test_ci --reset && RPC_NODE_URI=http://0.0.0.0:8545 npm run snapshot_test_evm && npm run check_amm_bytecode && npm run clean_contract_json",
     "test_only": "NODE_ENV=test jest --setupFiles dotenv/config --runInBand",
-    "test_only_specific": "NODE_ENV=test jest --setupFiles dotenv/config --runInBand -t 'Expiry'",
+    "test_only_specific": "NODE_ENV=test jest --setupFiles dotenv/config --runInBand -t 'Liquidate'",
     "test_cov": "npm run deploy_coverage && NETWORK_ID=1002 COVERAGE=true RPC_NODE_URI=http://127.0.0.1:8555 npm run test_only -- --forceExit",
     "ci_test": "NODE_ENV=test RPC_NODE_URI=http://0.0.0.0:8545 jest --setupFiles dotenv/config --runInBand",
     "reset_test_evm": "node scripts/reset-test-evm.js",
@@ -58,7 +58,7 @@
     "install_compiler": "docker pull ethereum/solc:0.5.7",
     "save_deployed_addresses": "ts-node ./scripts/SaveDeployedAddresses.ts",
     "serve_docs": "docsify serve ./docs",
-    "execute-set-expiry": "ts-node ./scripts/set-expiry.ts"
+    "execute-set-expiry": "ts-node scripts/SetExpiry.ts"
   },
   "repository": {
     "type": "git",
