--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "lint:sol": "solium --debug --fix -d contracts/",
     "lint:dolomite-margin": "python util/lintcontracts.py",
     "coverage": "node scripts/coverage.js",
-    "node": "ganache",
+    "node": "ganache-cli",
     "debug": "truffle debug",
     "build:js": "rm -rf dist/ && node --max-old-space-size=8192 node_modules/.bin/tsc && cp -r build/wrappers dist/build",
     "build:cov": "npm run clean_contract_json && npm run build:wrappers && npm run build:test_wrappers",
     "replace_bytecode": "ts-node ./scripts/ReplaceCoverageBytecode.ts",
-    "docker_node": "ganache -i 1313 -d -p 8545 -h 0.0.0.0 --db=/home/.ganache",
+    "docker_node": "ganache-cli -i 1313 -d -p 8545 -h 0.0.0.0 --db=/home/.ganache",
     "check_amm_bytecode": "ts-node ./scripts/CheckAmmBytecode.ts",
     "clean_contract_json": "ts-node ./scripts/CleanBuild.ts",
     "deploy": "truffle migrate --network=$NETWORK --f 3 && npm run save_deployed_addresses",
@@ -93,7 +93,6 @@
     "canonical-weth": "^1.4.0",
     "es6-promisify": "^6.0.1",
     "ethers": "4.0.39",
-    "ganache": "^7.0.4",
     "query-string": "^6.9.0",
     "web3": "1.2.1"
   },
@@ -109,11 +108,13 @@
     "chai": "^4.1.2",
     "coveralls": "^3.0.3",
     "docsify-cli": "^4.3.0",
+    "dotenv": "^16.0.0",
     "dotenv-flow": "^0.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "ethlint": "^1.2.5",
+    "ganache-cli": "^6.12.2",
     "jest": "24.1.0",
     "mocha-junit-reporter": "^1.18.0",
     "ora": "^4.0.3",
