--- a/package.json
+++ b/package.json
@@ -85,7 +85,6 @@
   "homepage": "https://github.com/dolomite-exchange/dolomite-margin#readme",
   "dependencies": {
     "@openzeppelin/contracts": "^2.5.1",
-    "@truffle/hdwallet-provider": "^1.2.6",
     "@types/web3": "1.0.18",
     "@uniswap/lib": "^4.0.1-alpha",
     "axios": "^0.21.1",
@@ -99,6 +98,7 @@
   "devDependencies": {
     "@poanet/solidity-flattener": "^3.0.6",
     "@truffle/config": "^1.2.14",
+    "@truffle/hdwallet-provider": "^2.0.6",
     "@types/axios": "^0.14.0",
     "@types/es6-promisify": "^6.0.0",
     "@types/jest": "^24.0.9",
@@ -119,9 +119,8 @@
     "mocha-junit-reporter": "^1.18.0",
     "ora": "^4.0.3",
     "solidity-coverage": "0.7.1",
-    "truffle": "^5.5.9",
+    "truffle": "~5.1.12",
     "truffle-flattener": "^1.5.0",
-    "truffle-hdwallet-provider": "^1.0.16",
     "truffle-plugin-verify": "^0.5.21",
     "ts-jest": "24.1.0",
     "ts-node": "^8.0.2",
